*** empty log message ***

--- a/Source/Strive/Rendering/R3D/Strive.Rendering.R3D.csproj
+++ b/Source/Strive/Rendering/R3D/Strive.Rendering.R3D.csproj
@@ -131,7 +131,7 @@
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "Exceptions.cs"
+                    RelPath = "Interop.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
