--- a/Source/Strive/UI/WorldBuilder/Strive.UI.WorldBuilder.csproj
+++ b/Source/Strive/UI/WorldBuilder/Strive.UI.WorldBuilder.csproj
@@ -91,14 +91,6 @@
                     WrapperTool = "tlbimp"
                 />
                 <Reference
-                    Name = "TrueVision3D"
-                    Guid = "{E6241C9D-371E-44C7-9579-F208B7B5F89F}"
-                    VersionMajor = "9"
-                    VersionMinor = "2"
-                    Lcid = "0"
-                    WrapperTool = "tlbimp"
-                />
-                <Reference
                     Name = "Strive.Multiverse"
                     Project = "{9FD77152-07A8-42C8-A6B3-15C9E5B442FC}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
@@ -148,6 +140,14 @@
                     Project = "{FCB073C1-253E-46D8-BCE4-79B1C1616058}"
                     Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
                 />
+                <Reference
+                    Name = "SQLDMO"
+                    Guid = "{10010001-E260-11CF-AE68-00AA004A34D5}"
+                    VersionMajor = "8"
+                    VersionMinor = "0"
+                    Lcid = "0"
+                    WrapperTool = "tlbimp"
+                />
             </References>
         </Build>
         <Files>
@@ -160,6 +160,26 @@
                     RelPath = "AssemblyInfo.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "DBPicker.cs"
+                    SubType = "UserControl"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "DBPicker.resx"
+                    DependentUpon = "DBPicker.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
+                    RelPath = "OpenFromDatabase.cs"
+                    SubType = "Form"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "OpenFromDatabase.resx"
+                    DependentUpon = "OpenFromDatabase.cs"
+                    BuildAction = "EmbeddedResource"
                 />
                 <File
                     RelPath = "WinMain.cs"
