--- a/Source/Strive/UI/WorldBuilder/Strive.UI.WorldBuilder.csproj
+++ b/Source/Strive/UI/WorldBuilder/Strive.UI.WorldBuilder.csproj
@@ -153,6 +153,10 @@
         <Files>
             <Include>
                 <File
+                    RelPath = "app.config"
+                    BuildAction = "None"
+                />
+                <File
                     RelPath = "App.ico"
                     BuildAction = "Content"
                 />
