--- a/Source/Strive/Network/Messages/Strive.Network.Messages.csproj
+++ b/Source/Strive/Network/Messages/Strive.Network.Messages.csproj
@@ -267,6 +267,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "ToServer\QueryPhysicalObject.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "ToServer\ReloadWorld.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
