--- a/Source/Strive/UI/Strive.UI.csproj
+++ b/Source/Strive/UI/Strive.UI.csproj
@@ -382,6 +382,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Windows\ChildWindows\WhoList.resx"
+                    DependentUpon = "WhoList.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Windows\Controls\CommandInput.cs"
                     SubType = "UserControl"
                     BuildAction = "Compile"
