Implimented new networking, uses both TCP and UDP, all calls are asynchronous.

--- a/Source/Strive/Network/Server/Strive.Network.Server.csproj
+++ b/Source/Strive/Network/Server/Strive.Network.Server.csproj
@@ -112,12 +112,7 @@
                     BuildAction = "Compile"
                 />
                 <File
-                    RelPath = "TcpHandler.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "UdpHandler.cs"
+                    RelPath = "Listener.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
