--- a/Source/Strive/Network/Messages/Strive.Network.Messages.csproj
+++ b/Source/Strive/Network/Messages/Strive.Network.Messages.csproj
@@ -122,6 +122,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "NetworkProtocolType.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "ToClient\Acknowledge.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
