--- a/Source/Strive/Multiverse/Strive.Multiverse.csproj
+++ b/Source/Strive/Multiverse/Strive.Multiverse.csproj
@@ -127,6 +127,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "EnumTerrainType.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "EnumWearLocation.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
