--- a/Source/Strive/Server/Console/Strive.Server.Console.csproj
+++ b/Source/Strive/Server/Console/Strive.Server.Console.csproj
@@ -1,8 +1,8 @@
 <VisualStudioProject>
     <CSHARP
         ProjectType = "Local"
-        ProductVersion = "7.0.9466"
-        SchemaVersion = "1.0"
+        ProductVersion = "7.10.3077"
+        SchemaVersion = "2.0"
         ProjectGuid = "{2A3C1FEE-40E3-47F4-818B-B7019D89FCAF}"
     >
         <Build>
@@ -16,7 +16,10 @@
                 DefaultTargetSchema = "IE50"
                 DelaySign = "false"
                 OutputType = "Exe"
+                PreBuildEvent = ""
+                PostBuildEvent = ""
                 RootNamespace = "Strive.Server.Console"
+                RunPostBuildEvent = "OnBuildSuccess"
                 StartupObject = "Strive.Server.Console.Global"
             >
                 <Config
@@ -30,6 +33,8 @@
                     DebugSymbols = "true"
                     FileAlignment = "4096"
                     IncrementalBuild = "true"
+                    NoStdLib = "false"
+                    NoWarn = ""
                     Optimize = "false"
                     OutputPath = "bin\Debug\"
                     RegisterForComInterop = "false"
@@ -48,6 +53,8 @@
                     DebugSymbols = "false"
                     FileAlignment = "4096"
                     IncrementalBuild = "false"
+                    NoStdLib = "false"
+                    NoWarn = ""
                     Optimize = "true"
                     OutputPath = "bin\Release\"
                     RegisterForComInterop = "false"
@@ -88,6 +95,7 @@
             <Include>
                 <File
                     RelPath = "app.config"
+                    Link = "..\WindowsService\app.config"
                     BuildAction = "None"
                 />
                 <File
