Website can now rotate terrain

--- a/Source/Strive/www.strive3d.net/www.strive3d.net.csproj
+++ b/Source/Strive/www.strive3d.net/www.strive3d.net.csproj
@@ -1141,7 +1141,10 @@
                     RelPath = "ReferencedAssemblies\thisterminal.Web.pdb"
                     BuildAction = "Content"
                 />
-                <Folder RelPath = "screenshots\" />
+                <File
+                    RelPath = "screenshots\55.jpg"
+                    BuildAction = "Content"
+                />
             </Include>
         </Files>
     </CSHARP>
