--- a/Source/Strive/www.strive3d.net/Web.config
+++ b/Source/Strive/www.strive3d.net/Web.config
@@ -2,7 +2,7 @@
 
     <!-- application specific settings -->
     <appSettings>
-		<add key="ConnectionString" value="Data Source=game.strive3d.net;Integrated Security=SSPI;Initial Catalog=strive" />
+		<add key="ConnectionString" value="Data Source=redfern.sydneh.com;Integrated Security=SSPI;Initial Catalog=strive" />
     </appSettings>
 
     <system.web>
